--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -10,6 +10,7 @@
     </style>
 
     <style name="FullscreenTheme" parent="android:Theme.Holo">
+        <item name="android:windowNoTitle">true</item>
         <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@null</item>
