--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -7,6 +7,15 @@
     -->
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- API 14 theme customizations can go here. -->
+       
     </style>
 
+    <style name="FullscreenTheme" parent="android:Theme.Light">
+        	<item name="android:windowNoTitle">true</item>
+        	<item name="android:windowContentOverlay">@null</item>
+        	<item name="android:windowBackground">@null</item>
+        	<item name="buttonBarStyle">@style/ButtonBar</item>
+        	<item name="buttonBarButtonStyle">@style/ButtonBarButton</item>
+   	</style>
+    	
 </resources>
