--- a/res/layout/astro_gridview.xml
+++ b/res/layout/astro_gridview.xml
@@ -7,11 +7,13 @@
     <ImageView android:id="@+id/itemImage"
         	   android:layout_width="match_parent"
         	   android:layout_height="match_parent"
+        	   android:layout_gravity="center"
         	   />
     
     <TextView android:id="@+id/itemText"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:gravity="center"
               />
 
 </LinearLayout>
