--- a/res/layout/activity_astro_details.xml
+++ b/res/layout/activity_astro_details.xml
@@ -8,11 +8,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AstroDetailsActivity" >
 
-	<ListView
+	<TextView
 	    android:id="@+id/astroDetails"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent">
 	    
-	</ListView>   
+	</TextView>   
 
 </RelativeLayout>
