--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
     android:background="#FFFFFF"
     tools:context=".MainActivity" >
 
@@ -21,20 +22,27 @@
         android:textColor="#33b5e5"
         android:textSize="50sp"
         android:textStyle="bold" /> -->
+	     
+	        
+	    <Spinner 
+	        android:id="@+id/get_type_astro"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"/>
+	
+	    <GridView
+	        android:id="@+id/astro_main_content"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:columnWidth="90dp"
+	        android:gravity="center"
+	        android:horizontalSpacing="10dp"
+	        android:keepScreenOn="true"
+	        android:numColumns="auto_fit"
+	        android:stretchMode="columnWidth"
+	        android:verticalSpacing="0dp" >
+	        
+	    </GridView>
 
-    <GridView
-        android:id="@+id/astro_main_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:columnWidth="90dp"
-        android:gravity="center"
-        android:horizontalSpacing="10dp"
-        android:keepScreenOn="true"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="0dp" >
-        
-    </GridView>
 
     <!--
          This FrameLayout insets its children based on system windows using
@@ -66,4 +74,4 @@
         </LinearLayout>
     </FrameLayout> -->
 
-</RelativeLayout>
+</LinearLayout>
