--- a/res/layout/activity_astro_details.xml
+++ b/res/layout/activity_astro_details.xml
@@ -1,18 +1,113 @@
-<Tablelayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AstroDetailsActivity" >
-
-	<TextView
-	    android:id="@+id/astroDetails"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent">
-	    
-	</TextView>   
-
-</Tablelayout>
+	<TableRow> 
+		<TextView 
+		    android:id="@+id/summary"
+	        android:text="综合运势" 
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/summary_val"
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/love"
+	        android:text= "爱情运势"
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/love_val"
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/work"
+	        android:text= "工作状况"
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/work_val"
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/money"
+	        android:text= "理财投资"
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/money_val"
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/health"
+	         android:text= "健康指数"
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/health_val"
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/business"
+	        android:text= "商谈指数"
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/business_val"
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow>
+		<TableRow> 
+		<TextView 
+	        android:id="@+id/lucky_color" 
+	        android:text="幸运颜色"
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/lucky_color_val" 
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow> 
+		<TableRow> 
+		<TextView 
+	        android:id="@+id/lucky_num" 
+	        android:text= "幸运数字"
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/lucky_num_val"
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/fit_astro" 
+	        android:text= "速配星座"
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/fit_astro_val" 
+	        android:gravity="left" 
+	        android:padding="3dip" /> 
+	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/summary_text" 
+	        android:text="综合概述"  
+	        android:padding="3dip" /> 
+	    <TextView 
+	        android:id="@+id/summary_text_val" 
+	        android:layout_width="fill_parent"
+  			android:layout_height="wrap_content"
+	        android:singleLine="false"
+	        android:scrollbars="vertical"
+	        android:layout_weight="10"/> 
+	</TableRow>  
+</TableLayout>
