--- a/res/layout/activity_astro_details.xml
+++ b/res/layout/activity_astro_details.xml
@@ -7,45 +7,65 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AstroDetailsActivity" >
-	<TableRow> 
+	<TableRow android:layout_marginRight="10dip"> 
 		<TextView 
 		    android:id="@+id/summary"
 	        android:text="综合运势" 
 	        android:padding="3dip" /> 
-	    <TextView 
-	        android:id="@+id/summary_val"
-	        android:gravity="left" 
-	        android:padding="3dip" /> 
+
+	     <RatingBar
+	         android:id="@+id/ratingbarSummary"
+	         style="?android:attr/ratingBarStyleSmall"
+	         android:layout_gravity="left|center"
+	         android:layout_marginLeft="10dip"
+	         android:numStars="5"
+	         android:stepSize="1" />
+ 
 	</TableRow> 
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/love"
 	        android:text= "爱情运势"
 	        android:padding="3dip" /> 
-	    <TextView 
-	        android:id="@+id/love_val"
-	        android:gravity="left" 
-	        android:padding="3dip" /> 
+
+	     <RatingBar
+	         android:id="@+id/ratingbarLove"
+	         style="?android:attr/ratingBarStyleSmall"
+	         android:layout_gravity="left|center"
+	         android:layout_marginLeft="10dip"
+	         android:numStars="5"
+	         android:stepSize="1" />
+
 	</TableRow> 
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/work"
 	        android:text= "工作状况"
 	        android:padding="3dip" /> 
-	    <TextView 
-	        android:id="@+id/work_val"
-	        android:gravity="left" 
-	        android:padding="3dip" /> 
+
+	    <RatingBar
+	        android:id="@+id/ratingbarWork"
+	        style="?android:attr/ratingBarStyleSmall"
+	        android:layout_gravity="left|center"
+	        android:layout_marginLeft="10dip"
+	        android:numStars="5"
+	        android:stepSize="1" />
+
 	</TableRow> 
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/money"
 	        android:text= "理财投资"
 	        android:padding="3dip" /> 
-	    <TextView 
-	        android:id="@+id/money_val"
-	        android:gravity="left" 
-	        android:padding="3dip" /> 
+
+	    <RatingBar
+	        android:id="@+id/ratingbarMoney"
+	        style="?android:attr/ratingBarStyleSmall"
+	        android:layout_gravity="left|center"
+	        android:layout_marginLeft="10dip"
+	        android:numStars="5"
+	        android:stepSize="1" />
+ 
 	</TableRow> 
 	<TableRow> 
 		<TextView 
@@ -55,7 +75,8 @@
 	    <TextView 
 	        android:id="@+id/health_val"
 	        android:gravity="left" 
-	        android:padding="3dip" /> 
+	        android:padding="3dip" 
+	        android:layout_marginLeft="10dip"/> 
 	</TableRow> 
 	<TableRow> 
 		<TextView 
@@ -65,7 +86,8 @@
 	    <TextView 
 	        android:id="@+id/business_val"
 	        android:gravity="left" 
-	        android:padding="3dip" /> 
+	        android:padding="3dip" 
+	        android:layout_marginLeft="10dip"/> 
 	</TableRow>
 		<TableRow> 
 		<TextView 
@@ -75,7 +97,8 @@
 	    <TextView 
 	        android:id="@+id/lucky_color_val" 
 	        android:gravity="left" 
-	        android:padding="3dip" /> 
+	        android:padding="3dip" 
+	        android:layout_marginLeft="10dip"/> 
 	</TableRow> 
 		<TableRow> 
 		<TextView 
@@ -85,7 +108,8 @@
 	    <TextView 
 	        android:id="@+id/lucky_num_val"
 	        android:gravity="left" 
-	        android:padding="3dip" /> 
+	        android:padding="3dip" 
+	        android:layout_marginLeft="10dip"/> 
 	</TableRow> 
 	<TableRow> 
 		<TextView 
@@ -95,7 +119,8 @@
 	    <TextView 
 	        android:id="@+id/fit_astro_val" 
 	        android:gravity="left" 
-	        android:padding="3dip" /> 
+	        android:padding="3dip" 
+	        android:layout_marginLeft="10dip"/> 
 	</TableRow> 
 	<TableRow> 
 		<TextView 
@@ -108,6 +133,7 @@
   			android:layout_height="wrap_content"
 	        android:singleLine="false"
 	        android:scrollbars="vertical"
-	        android:layout_weight="10"/> 
+	        android:layout_weight="10"
+	        android:layout_marginLeft="10dip"/> 
 	</TableRow>  
 </TableLayout>
