--- a/res/layout/activity_astro_details.xml
+++ b/res/layout/activity_astro_details.xml
@@ -1,13 +1,30 @@
-<TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".AstroDetailsActivity" >
-	<TableRow> 
+    tools:context=".AstroDetailsActivity"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#000000">
+
+   <TextView
+       android:id="@+id/titleAstro"
+       android:layout_width="fill_parent"
+       android:layout_height="100dp"
+       android:background="#FFFFFF"
+       android:gravity="center"
+       android:text="Today"
+       android:textColor="#000000"
+       android:textSize="22sp" />
+   
+
+  <TableLayout  android:layout_width="fill_parent" 
+       android:layout_height="fill_parent"
+       android:gravity="fill_vertical">
+       <TableRow> 
 		<TextView 
 		    android:id="@+id/summary"
 	        android:text="综合运势" 
@@ -111,3 +128,6 @@
 	        android:layout_weight="10"/> 
 	</TableRow>  
 </TableLayout>
+        
+    </LinearLayout>
+
