--- a/res/layout/activity_astro_details.xml
+++ b/res/layout/activity_astro_details.xml
@@ -1,25 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:background="#000000">
 
-   <TextView
-       android:id="@+id/titleAstro"
-       android:layout_width="fill_parent"
-       android:layout_height="100dp"
-       android:background="#FFFFFF"
-       android:gravity="center"
-       android:textColor="#000000"
-       android:textSize="22sp" />
-   
+         <TextView
+	         android:id="@+id/titleAstro"
+	         android:layout_width="fill_parent"
+	         android:layout_height="100dp"
+	         android:gravity="center"
+	         android:background="#FFFFFF"
+	         android:text="test"
+	         android:textColor="#000000"
+	         android:textSize="50sp"/>
 
-  <TableLayout  android:layout_width="fill_parent" 
+ <TableLayout  android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:gravity="fill_vertical">
 	<TableRow android:layout_marginRight="10dip"> 
@@ -150,8 +146,7 @@
 	        android:scrollbars="vertical"
 	        android:layout_weight="10"
 	        android:layout_marginLeft="10dip"/> 
-	</TableRow>  
+	</TableRow> 
 </TableLayout>
-        
     </LinearLayout>
 
