--- a/res/layout/activity_astro_viewpager.xml
+++ b/res/layout/activity_astro_viewpager.xml
@@ -28,5 +28,42 @@
         android:gravity="center"
         android:textColor="#000000"
         android:textSize="22dip"/>
+    
+    <LinearLayout android:id="@+id/pps"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center"
+                  android:layout_marginBottom="24.0dip"
+                  android:orientation="horizontal">
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="center"
+                   android:padding="15.0dip"
+                   android:src="@drawable/point"/>
+        
+        <ImageView android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:padding="15.0dip"
+           android:src="@drawable/point"/>
+        
+        <ImageView android:layout_width="wrap_content"
+   			android:layout_height="wrap_content"
+   			android:layout_gravity="center"
+   			android:padding="15.0dip"
+   			android:src="@drawable/point"/>
+        
+        <ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:padding="15.0dip"
+			android:src="@drawable/point"/>
+        
+        <ImageView android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:padding="15.0dip"
+				android:src="@drawable/point"/>
+    </LinearLayout>
 
 </LinearLayout>
