--- a/res/layout/activity_astro_details_month.xml
+++ b/res/layout/activity_astro_details_month.xml
@@ -1,7 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#000000">
+    <TextView
+        android:id="@+id/titleAstroMore"
+        android:layout_width="fill_parent"
+        android:layout_height="29dp"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="22sp" />
+<ScrollView 
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent"
+    android:scrollbars="vertical">
+<TableLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
+    <TableRow android:layout_marginRight="10dip"> 
+		<TextView 
+		    android:id="@+id/summary"
+	        android:text="整体运势" 
+	        android:padding="3dip" /> 
+	     <RatingBar
+	         android:id="@+id/ratingbarSummary"
+	         style="?android:attr/ratingBarStyleSmall"
+	         android:layout_gravity="left|center"
+	         android:layout_marginLeft="10dip"
+	         android:numStars="5"
+	         android:stepSize="1" />
+ 
+	</TableRow>
+	<TableRow> 
+		<TextView /> 
+		<TextView 	 android:id="@+id/summary_val"      
+		    android:layout_width="fill_parent"
+  			android:layout_height="wrap_content"
+	        android:singleLine="false"
+	        android:scrollbars="vertical"
+	        android:layout_weight="10"
+	        android:layout_marginLeft="10dip" ></TextView>
+ 	</TableRow>
+ 	<TableRow android:layout_marginRight="10dip"> 
+		<TextView 
+		    android:id="@+id/love"
+	        android:text="爱情运势" 
+	        android:padding="3dip" /> 
 
+	     <RatingBar
+	         android:id="@+id/ratingbarLove"
+	         style="?android:attr/ratingBarStyleSmall"
+	         android:layout_gravity="left|center"
+	         android:layout_marginLeft="10dip"
+	         android:numStars="5"
+	         android:stepSize="1" />
+ 
+	</TableRow>
+	<TableRow> 
+		<TextView /> 
+		<TextView 	 android:id="@+id/love_val"      
+		    android:layout_width="fill_parent"
+  			android:layout_height="wrap_content"
+	        android:singleLine="false"
+	        android:scrollbars="vertical"
+	        android:layout_weight="10"
+	        android:layout_marginLeft="10dip" ></TextView>
+ 	</TableRow>   
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/Money"
+	        android:text= "投资理财运"
+	        android:padding="3dip" /> 
+
+	     <RatingBar
+	         android:id="@+id/ratingbarMoney"
+	         style="?android:attr/ratingBarStyleSmall"
+	         android:layout_gravity="left|center"
+	         android:layout_marginLeft="10dip"
+	         android:numStars="5"
+	         android:stepSize="1" />
+
+	</TableRow> 
+	<TableRow> 
+		<TextView /> 
+		<TextView 	 android:id="@+id/Money_val"      
+		    android:layout_width="fill_parent"
+  			android:layout_height="wrap_content"
+	        android:singleLine="false"
+	        android:scrollbars="vertical"
+	        android:layout_weight="10"
+	        android:layout_marginLeft="10dip" ></TextView>
+ 	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/release"
+	        android:text= "解压方式"
+	        android:padding="3dip" /> 
+		<TextView></TextView>
+	</TableRow> 
+	<TableRow> 
+		<TextView  /> 
+		<TextView 	 android:id="@+id/releaseWay_val"      
+		    android:layout_width="fill_parent"
+  			android:layout_height="wrap_content"
+	        android:singleLine="false"
+	        android:scrollbars="vertical"
+	        android:layout_weight="10"
+	        android:layout_marginLeft="10dip" ></TextView>
+ 	</TableRow> 
+	<TableRow> 
+		<TextView 
+	        android:id="@+id/luckyTips"
+	        android:text= "开运小秘诀"
+	        android:padding="3dip" /> 
+         <TextView  /> 
+ 	</TableRow>
+ 	<TableRow>
+ 	     <TextView  /> 
+ 	    <TextView 	 android:id="@+id/luckyTips_val"      
+		    android:layout_width="fill_parent"
+  			android:layout_height="wrap_content"
+	        android:singleLine="false"
+	        android:scrollbars="vertical"
+	        android:layout_weight="10"
+	        android:layout_marginLeft="10dip" ></TextView>
+ 	</TableRow> 
+ 	<TableRow> 
+		<TextView 
+	        android:id="@+id/luckyThing"
+	        android:text= "幸运物"
+	        android:padding="3dip" /> 
+	        <TextView  /> 
+ 	</TableRow> 
+ 	<TableRow>
+ 	    <TextView  /> 
+		<TextView 	 android:id="@+id/luckyThing_val"      
+		    android:layout_width="fill_parent"
+  			android:layout_height="wrap_content"
+	        android:singleLine="false"
+	        android:scrollbars="vertical"
+	        android:layout_weight="10"
+	        android:layout_marginLeft="10dip" ></TextView>
+ 	</TableRow>
 </TableLayout>
+</ScrollView>
+</LinearLayout>
