--- a/app/src/main/res/layout/astro_gridviewItem.xml
+++ b/app/src/main/res/layout/astro_gridviewItem.xml
@@ -16,4 +16,8 @@
               android:gravity="center"
               />
 
+    <TextView android:id="@+id/itemTextEn"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="invisible"/>
 </LinearLayout>
