--- a/app/src/main/res/layout/activity_astro_details_year.xml
+++ b/app/src/main/res/layout/activity_astro_details_year.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#000000">
     <TextView
         android:id="@+id/titleAstroMore"
         android:layout_width="fill_parent"
@@ -12,11 +14,17 @@
         android:textColor="#000000"
         android:textSize="50sp"
         android:textStyle="bold" />
-
-    <TableRow android:layout_marginRight="10dip"> 
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scrollbars="vertical">
+    <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+    <TableRow android:layout_marginRight="10dip">
 		<TextView 
 		    android:id="@+id/summary"
-	        android:text="整体概况" 
+	        android:text="整体概况"
 	        android:padding="3dip" /> 
 	     <RatingBar
 	         android:id="@+id/ratingbarSummary"
@@ -65,7 +73,7 @@
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/work"
-	        android:text= "投资理财运"
+	        android:text= "工作职场"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -90,7 +98,7 @@
  	<TableRow> 
 		<TextView 
 	        android:id="@+id/money"
-	        android:text= "投资理财运"
+	        android:text= "金钱理财"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -115,7 +123,7 @@
  	 	<TableRow> 
 		<TextView 
 	        android:id="@+id/love"
-	        android:text= "投资理财运"
+	        android:text= "恋爱婚姻"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -144,10 +152,13 @@
 	        android:padding="3dip" /> 
 		<TextView></TextView>
  	</TableRow> 
- 	<TableRow> 
-		<TextView 
+ 	<TableRow>
+        <TextView/>
+        <TextView
 	        android:id="@+id/tips_val"
 	        android:padding="3dip" /> 
-		<TextView></TextView>
- 	</TableRow> 
+
+ 	</TableRow>
 </TableLayout>
+</ScrollView>
+</LinearLayout>
