--- a/app/src/main/res/layout/activity_astro_details_month.xml
+++ b/app/src/main/res/layout/activity_astro_details_month.xml
@@ -24,7 +24,7 @@
     <TableRow android:layout_marginRight="10dip"> 
 		<TextView 
 		    android:id="@+id/summary"
-	        android:text="整体运势" 
+	        android:text="@string/total_fortune_2"
 	        android:padding="3dip" /> 
 	     <RatingBar
 	         android:id="@+id/ratingbarSummary"
@@ -48,7 +48,7 @@
  	<TableRow android:layout_marginRight="10dip"> 
 		<TextView 
 		    android:id="@+id/love"
-	        android:text="爱情运势" 
+	        android:text="@string/love_fortune"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -73,7 +73,7 @@
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/Money"
-	        android:text= "投资理财运"
+	        android:text= "@string/finance_2"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -98,7 +98,7 @@
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/release"
-	        android:text= "解压方式"
+	        android:text= "@string/release"
 	        android:padding="3dip" /> 
 		<TextView></TextView>
 	</TableRow> 
@@ -115,7 +115,7 @@
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/luckyTips"
-	        android:text= "开运小秘诀"
+	        android:text= "@string/tips"
 	        android:padding="3dip" /> 
          <TextView  /> 
  	</TableRow>
@@ -132,7 +132,7 @@
  	<TableRow> 
 		<TextView 
 	        android:id="@+id/luckyThing"
-	        android:text= "幸运物"
+	        android:text= "@string/lucky_stuff"
 	        android:padding="3dip" /> 
 	        <TextView  /> 
  	</TableRow> 
