--- a/app/src/main/res/layout/activity_astro_details_more.xml
+++ b/app/src/main/res/layout/activity_astro_details_more.xml
@@ -25,7 +25,7 @@
       <TableRow android:layout_marginRight="10dip"> 
 		<TextView 
 		    android:id="@+id/summary"
-	        android:text="整体运势" 
+	        android:text="@string/total_fortune_2"
 	        android:padding="3dip" /> 
 	     <RatingBar
 	         android:id="@+id/ratingbarSummary"
@@ -39,7 +39,7 @@
 		<TextView  android:padding="3dip" /> 
 		<TextView 
 		    android:id="@+id/summary_val"
-	        android:text="整体运势描述" 
+	        android:text="@string/outline"
 	        android:layout_width="fill_parent"
   			android:layout_height="wrap_content"
 	        android:singleLine="false"
@@ -51,13 +51,13 @@
 	 <TableRow>
 	     	<TextView 
 	        android:id="@+id/love"
-	        android:text= "爱情运势"
+	        android:text= "@string/love_fortune"
 	        android:padding="3dip" /> 
 	 </TableRow>  
 	 <TableRow> 
 		<TextView 
 	        android:id="@+id/withlove"
-	        android:text= "有对象："
+	        android:text= "@string/not_alone"
 	        android:padding="3dip" /> 
 	     <RatingBar
 	         android:id="@+id/ratingbarWithLove"
@@ -81,7 +81,7 @@
 	 <TableRow> 
 		<TextView 
 	        android:id="@+id/nolove"
-	        android:text= "无对象："
+	        android:text= "@string/alone"
 	        android:padding="3dip" /> 
 	     <RatingBar
 	         android:id="@+id/ratingbarNoLove"
@@ -105,7 +105,7 @@
 	 <TableRow> 
 		<TextView 
 	        android:id="@+id/health"
-	        android:text= "健康运势"
+	        android:text= "@string/health_2"
 	        android:padding="3dip" /> 
 	    <RatingBar
 	        android:id="@+id/ratingbarHealth"
@@ -130,7 +130,7 @@
  	<TableRow> 
 		<TextView 
 	        android:id="@+id/workStudy"
-	        android:text= "工作学业运"
+	        android:text= "@string/work_2"
 	        android:padding="3dip" /> 
 		<RatingBar
 	        android:id="@+id/ratingbarWorkStudy"
@@ -154,7 +154,7 @@
  	<TableRow> 
 		<TextView 
 	        android:id="@+id/sex"
-	        android:text= "性欲指数"
+	        android:text= "@string/sex"
 	        android:padding="3dip" /> 
 		<RatingBar
 	        android:id="@+id/ratingbarSex"
@@ -178,7 +178,7 @@
 	 <TableRow> 
 		<TextView 
 	        android:id="@+id/luckyday"
-	        android:text= "红心日"
+	        android:text= "@string/good_days"
 	        android:padding="3dip" />
 		<TextView /> 
  	</TableRow>
@@ -196,7 +196,7 @@
  	<TableRow> 
 		<TextView 
 	        android:id="@+id/badday"
-	        android:text= "黑梅日"
+	        android:text= "@string/bad_days"
 	        android:padding="3dip" /> 
 	        <TextView />
  	</TableRow>
@@ -214,7 +214,7 @@
  	<TableRow> 
 		<TextView 
 	        android:id="@+id/tips"
-	        android:text= "小提示"
+	        android:text= "@string/tips_2"
 	        android:padding="3dip" />
 		<TextView /> 
  	</TableRow>
