--- a/app/src/main/res/layout/activity_astro_details_year.xml
+++ b/app/src/main/res/layout/activity_astro_details_year.xml
@@ -24,7 +24,7 @@
     <TableRow android:layout_marginRight="10dip">
 		<TextView 
 		    android:id="@+id/summary"
-	        android:text="整体概况"
+	        android:text="@string/total_fortune_2"
 	        android:padding="3dip" /> 
 	     <RatingBar
 	         android:id="@+id/ratingbarSummary"
@@ -48,7 +48,7 @@
  	<TableRow android:layout_marginRight="10dip"> 
 		<TextView 
 		    android:id="@+id/study"
-	        android:text="功课学业" 
+	        android:text="@string/study"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -73,7 +73,7 @@
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/work"
-	        android:text= "工作职场"
+	        android:text= "@string/work_3"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -98,7 +98,7 @@
  	<TableRow> 
 		<TextView 
 	        android:id="@+id/money"
-	        android:text= "金钱理财"
+	        android:text= "@string/finance_3"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -123,7 +123,7 @@
  	 	<TableRow> 
 		<TextView 
 	        android:id="@+id/love"
-	        android:text= "恋爱婚姻"
+	        android:text= "@string/love_fortune_2"
 	        android:padding="3dip" /> 
 
 	     <RatingBar
@@ -148,7 +148,7 @@
 	<TableRow> 
 		<TextView 
 	        android:id="@+id/tips"
-	        android:text= "小提示"
+	        android:text= "@string/tips_2"
 	        android:padding="3dip" /> 
 		<TextView></TextView>
  	</TableRow> 
