--- a/app/src/main/res/layout/activity_astro_details_month.xml
+++ b/app/src/main/res/layout/activity_astro_details_month.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="#000000">
+    android:orientation="vertical">
     <TextView
         android:id="@+id/titleAstroMore"
         android:layout_width="fill_parent"
@@ -20,7 +19,7 @@
     android:scrollbars="vertical">
 <TableLayout 
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
     <TableRow android:layout_marginRight="10dip"> 
 		<TextView 
 		    android:id="@+id/summary"
