--- a/app/src/main/res/layout/activity_astro_details_more.xml
+++ b/app/src/main/res/layout/activity_astro_details_more.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="#000000">
+    android:orientation="vertical">
 
    <TextView
        		 android:id="@+id/titleAstroMore"
@@ -20,7 +19,7 @@
     android:scrollbars="vertical">
    <TableLayout
        android:layout_width="fill_parent" 
-       android:layout_height="fill_parent"
+       android:layout_height="wrap_content"
        android:gravity="fill_vertical" >
       <TableRow android:layout_marginRight="10dip"> 
 		<TextView 
