--- a/app/src/main/res/layout/activity_astro_details.xml
+++ b/app/src/main/res/layout/activity_astro_details.xml
@@ -12,7 +12,10 @@
              android:textSize="25sp"
              android:textAlignment="center"
              android:textStyle="bold" />
-
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scrollbars="vertical">
  <TableLayout  android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="fill_vertical"
@@ -147,5 +150,6 @@
 	        android:layout_marginLeft="10dip"/>
 	</TableRow>
 </TableLayout>
+    </ScrollView>
     </LinearLayout>
 
