--- a/app/src/main/res/layout/activity_astro_viewpager.xml
+++ b/app/src/main/res/layout/activity_astro_viewpager.xml
@@ -27,42 +27,44 @@
         android:layout_weight="1.0"
         android:gravity="center"
         android:textColor="#000000"
-        android:textSize="22sp"/>
+        android:textSize="22sp"
+        android:layout_gravity="bottom" />
     
     <LinearLayout android:id="@+id/pps"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
-                  android:layout_marginBottom="24.0dip"
+                  android:layout_marginBottom="0dip"
                   android:orientation="horizontal">
-        <ImageView android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_gravity="center"
-                   android:padding="15.0dip"
-                   android:src="@drawable/point"/>
-        
+
         <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:layout_gravity="center"
-           android:padding="15.0dip"
+           android:layout_gravity="center|bottom"
+           android:padding="10.0dip"
            android:src="@drawable/point"/>
-        
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+            android:padding="10.0dip"
+                   android:src="@drawable/point"
+            android:layout_gravity="bottom" />
+
         <ImageView android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
-   			android:layout_gravity="center"
-   			android:padding="15.0dip"
+   			android:layout_gravity="center|bottom"
+   			android:padding="10.0dip"
    			android:src="@drawable/point"/>
         
         <ImageView android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="center"
-			android:padding="15.0dip"
+			android:layout_gravity="center|bottom"
+			android:padding="10.0dip"
 			android:src="@drawable/point"/>
         
         <ImageView android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_gravity="center"
-				android:padding="15.0dip"
+				android:layout_gravity="center|bottom"
+				android:padding="10.0dip"
 				android:src="@drawable/point"/>
     </LinearLayout>
 
